# django-educa

./: .env.example  .flake8  .gitignore  Dockerfile  LICENCE.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
apps/courses/: admin.py  apps.py  fields.py  forms.py  urls.py
apps/courses/fixtures/: subjects.json
apps/courses/migrations/: 0004_alter_content_options_alter_module_options_and_more.py
apps/courses/models/: __init__.py  content.py  course.py  itembase.py  module.py  subject.py
apps/courses/tests/: test_models.py
apps/courses/tests/unit/: test_fields.py  test_models.py
apps/courses/views/: manage_course.py  views.py
apps/courses/views/mixins/: owners_mixins.py
apps/homepage/: apps.py  urls.py
apps/users/: urls.py
apps/users/tests/unit/: test_urls.py
config/: settings.py  urls.py
educa/: manage.py  mypy.ini
educa/courses/: models.py  urls.py
educa/courses/tests/: test_models.py
educa/educa/: asgi.py  settings.py  urls.py  wsgi.py
src/apps/accounts/: apps.py  urls.py
src/apps/courses/: admin.py  apps.py  fields.py  forms.py  urls.py
src/apps/homepage/: apps.py  urls.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: base.py  development.py  production.py  settings.py
src/static/css/: base.css  landing.css
src/templates/: base.html
src/templates/homepage/: homepage.html
templates/: base.html
templates/homepage/: homepage.html
templates/users/registration/: logged_out.html  login.html
(+39 files in other folders)
